@@ -1,17 +1,21 @@
 package vadl.lcb.template.lib.Target.MCTargetDesc;
 
+import static vadl.viam.ViamError.ensurePresent;
+
 import java.io.IOException;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Stream;
 import vadl.configuration.LcbConfiguration;
-import vadl.gcb.passes.relocation.model.ConcreteLogicalRelocation;
-import vadl.gcb.passes.relocation.model.LogicalRelocation;
+import vadl.error.Diagnostic;
+import vadl.gcb.passes.relocation.model.ImplementedUserSpecifiedRelocation;
 import vadl.lcb.passes.relocation.GenerateLinkerComponentsPass;
 import vadl.lcb.template.CommonVarNames;
 import vadl.lcb.template.LcbTemplateRenderingPass;
 import vadl.lcb.templateUtils.RegisterUtils;
 import vadl.pass.PassResults;
+import vadl.template.Renderable;
 import vadl.viam.Abi;
 import vadl.viam.AssemblyDescription;
 import vadl.viam.Definition;
@@ -39,14 +43,15 @@ public class EmitAsmUtilsCppFilePass extends LcbTemplateRenderingPass {
     return "llvm/lib/Target/" + processorName + "/MCTargetDesc/AsmUtils.cpp";
   }
 
-  private List<ConcreteLogicalRelocation> formatModifier(PassResults passResults) {
+  private List<ModifierAggregate> formatModifier(PassResults passResults) {
     var container = (GenerateLinkerComponentsPass.Output) passResults.lastResultOf(
         GenerateLinkerComponentsPass.class);
     return container.elfRelocations()
         .stream()
-        .filter(x -> x instanceof ConcreteLogicalRelocation)
-        .map(x -> (ConcreteLogicalRelocation) x)
-        .filter(distinctByKey(LogicalRelocation::variantKind))
+        .filter(x -> x instanceof ImplementedUserSpecifiedRelocation)
+        .map(x -> (ImplementedUserSpecifiedRelocation) x)
+        .filter(distinctByKey(ImplementedUserSpecifiedRelocation::variantKind))
+        .map(x -> new ModifierAggregate(x.variantKind().value(), x.relocation().simpleName()))
         .toList();
   }
 
@@ -69,15 +74,39 @@ public class EmitAsmUtilsCppFilePass extends LcbTemplateRenderingPass {
     return List.of();
   }
 
-  private List<Map<String, String>> modifierMappings(Specification specification) {
+  private List<Map<String, String>> modifierMappings(
+      Specification specification,
+      GenerateLinkerComponentsPass.Output linkerInformation) {
     var mappings =
-        specification.assemblyDescription().map(AssemblyDescription::modifiers).orElse(List.of());
+        specification.assemblyDescription()
+            .map(AssemblyDescription::modifiers)
+            .orElse(Collections.emptyList());
+
     return mappings.stream().map(
-        mapping -> Map.of(
-            "modifier", mapping.simpleName(),
-            "relocation", mapping.getRelocation().identifier.lower()
-        )
+        mapping -> {
+          var elfRelocation =
+              ensurePresent(
+                  linkerInformation.elfRelocations().stream()
+                      .filter(x -> x.relocation().equals(mapping.getRelocation()))
+                      .findFirst(), () -> Diagnostic.error(
+                      "Cannot find an ELF relocation for the given relocation function.",
+                      mapping.getRelocation().sourceLocation()));
+
+          var variantKind = elfRelocation.variantKind();
+          return Map.of(
+              "modifier", mapping.simpleName(),
+              "variantKind", variantKind.value()
+          );
+        }
     ).toList();
+  }
+
+  record ModifierAggregate(String variantKind, String relocationName) implements Renderable {
+    @Override
+    public Map<String, Object> renderObj() {
+      return Map.of("variantKind", variantKind,
+          "relocationName", relocationName);
+    }
   }
 
   @Override
@@ -85,6 +114,10 @@ public class EmitAsmUtilsCppFilePass extends LcbTemplateRenderingPass {
                                                 Specification specification) {
     var abi =
         (Abi) specification.definitions().filter(x -> x instanceof Abi).findFirst().get();
+    var linkerInformation = (GenerateLinkerComponentsPass.Output) passResults.lastResultOf(
+        GenerateLinkerComponentsPass.class);
+    var modifiers = formatModifier(passResults);
+
     return Map.of(CommonVarNames.NAMESPACE,
         lcbConfiguration().processorName().value().toLowerCase(),
         "registers",
@@ -93,10 +126,10 @@ public class EmitAsmUtilsCppFilePass extends LcbTemplateRenderingPass {
         "registerClasses",
         specification.registerFiles().map(x -> RegisterUtils.getRegisterClass(x, abi.aliases()))
             .toList(),
-        "formatModifiers", formatModifier(passResults),
         "asmCompareFunction", stringCompareFunction(specification),
         "instructionNames", instructionsNames(specification),
-        "modifierMappings", modifierMappings(specification)
+        "modifierMappings", modifierMappings(specification, linkerInformation),
+        "formatModifiers", modifiers
     );
   }
 }
